Fix page titles not being center on smaller screens

--- a/static/public_html/assets/scss/layout/_header.scss
+++ b/static/public_html/assets/scss/layout/_header.scss
@@ -26,7 +26,8 @@
 
         .title {
             font-size: calc(40px + (90 - 40) * ((100vw - 320px) / (1200 - 320)));   
-            margin-bottom: 40px;        
+            margin-bottom: 40px;
+            text-align: center;
         }
     }
 
